--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Sebastian Zieba"
 title_separator          : "-"
 name                     : &name "Sebastian Zieba"
 description              : &description "PhD student at the Max Planck Institute for Astronomy"
-url                      : https://sebastian-zieba.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://sebastian-zieba.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sebastian-zieba/sebastian-zieba.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
