--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sebastian Zieba"
-  avatar           : "profile6.png"
+  avatar           : "profile_april2024.png"
   bio              : "Characterization of exoplanets with space based telescopes"
   location         : "Heidelberg, Germany"
   employer         : #Max Planck Institute for Astronomy and Leiden Observatory 
