--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Sebastian Zieba"
 title_separator          : "-"
 name                     : &name "Sebastian Zieba"
-description              : &description "PhD student at the Max Planck Institute for Astronomy"
+description              : &description "Sagan Fellow at the Center for Astrophysics | Harvard & Smithsonian"
 url                      : https://sebastian-zieba.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sebastian-zieba/sebastian-zieba.github.io"
@@ -83,7 +83,7 @@ author:
   name             : "Sebastian Zieba"
   avatar           : "profile_april2024.png"
   bio              : "Characterization of exoplanets with space based telescopes"
-  location         : "Heidelberg, Germany"
+  location         : "Cambridge, USA"
   employer         : #Max Planck Institute for Astronomy and Leiden Observatory 
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=U-i9TF4AAAAJ&hl=en"
