--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Sebastian Zieba"
 title_separator          : "-"
 name                     : &name "Sebastian Zieba"
-description              : &description "Sagan Fellow at the Center for Astrophysics | Harvard & Smithsonian"
+description              : &description "Sagan Fellow at the Center for Astrophysics, Harvard & Smithsonian"
 url                      : https://sebastian-zieba.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sebastian-zieba/sebastian-zieba.github.io"
